--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive_flutter: ^1.1.0
   lottie: ^1.0.1
   simple_barcode_scanner: ^0.1.1
+  shared_preferences: ^2.2.3
+  blue_thermal_printer: ^1.2.3
 
 dev_dependencies:
   flutter_test:
