--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   lottie: ^1.0.1
   simple_barcode_scanner: ^0.1.1
   shared_preferences: ^2.2.3
+  shared_preferences_web: ^2.2.3
   blue_thermal_printer: ^1.2.3
+  flutter_blue: ^0.8.0
 
 dev_dependencies:
   flutter_test:
